# colobot-data

./: .gitignore  .gitmodules  CHANGELOG.txt  CMakeLists.txt  Jenkinsfile  README.i18n.md  README.md  README.txt  make-package.sh  release.sh
colobot/: CMakeLists.txt
colobot/ai/: ant01.txt  ant10.txt  antics.txt  antict.txt  antt42.txt  convert.txt  human01.txt  human03.txt  human04.txt  human06.txt  shield01.txt  shield02.txt  spider02.txt  tant1.txt  tant2.txt  tant3.txt  tant4.txt  tant5.txt  tcell1.txt  tcell2.txt  tchasse2.txt  tchasse3.txt  tevite.txt  texch1.txt  tfollow1.txt  tfollow2.txt  tfor.txt  tfor2.txt  titan2.txt  titan4.txt  tlaby1.txt  tmove3.txt  tproc2.txt  tprot1.txt  tradar1.txt  tremot3a.txt  tremot5b.txt  tremova1.txt  tremova2.txt  tremova3.txt  (+13 more)
colobot/help/: CMakeLists.txt
colobot/levels/: CMakeLists.txt
colobot/music/: .gitignore  CMakeLists.txt  README.md
common/: CMakeLists.txt
common/models/: ant1.mod  ant2.mod  ant5.mod  apolloa.mod  apollof.mod  apolloj4.mod  apolloj5.mod  apolloj6.mod  apollol2.mod  apollol3.mod  apollom.mod  bag.mod  barricade1.mod  barrier2.mod  base2.mod  base4.mod  bee3.mod  bullet.mod  courge1.mod  courge2.mod  cross1.mod  cross3.mod  crossa.mod  crossc.mod  crossd.mod  drawer1.mod  drawer11.mod  drawer12.mod  drawer13.mod  drawer14.mod  drawer15.mod  drawer16.mod  energy.mod  factory2.mod  flag1.mod  flag1b.mod  flag1g.mod  flag1v.mod  flag2b.mod  flag2r.mod  (+107 more)
common/models-new/: ant1.txt  ant4.txt  ant6.txt  apolloa.txt  apollof.txt  apolloj2.txt  apolloj4.txt  apolloj5.txt  apollom.txt  bag.txt  barrier1.txt  barrier2.txt  base1.txt  base2.txt  base3.txt  bbox.txt  bee1.txt  bee2.txt  bee3.txt  bee7.txt  bomb.txt  bullet.txt  cross1.txt  cross3.txt  crossa.txt  crossd.txt  destroy1.txt  drawer12.txt  drawer13.txt  drawer14.txt  drawer15.txt  drawer16.txt  drawer17.txt  drawer2.txt  drawer5.txt  energy.txt  factory1.txt  factory2.txt  flag1g.txt  flag1r.txt  (+111 more)
help/: CMakeLists.txt  authors.txt  command.txt  dhelp1.txt  dremova2.txt  mhsaari1.txt  mhsaari2.txt  mhvolca3.txt  mhvolca4.txt  micrys2.txt  milune2.txt  mitropi3.txt  mlcent3.txt  mscent1.txt  mscrys3.txt  msterra2.txt  mstropi1.txt  mstropi3.txt  msvolca1.txt  msvolca5.txt  tfollow1.txt  tlaby2.txt  tremote1.txt  tremote2.txt  tremote4.txt  tremote5.txt  tremova1.txt  tremova4.txt  twasp2.txt
help/D/: dtrap1.txt  licences.txt  mhcent5.txt  mhlune2.txt  mhtropi1.txt  mitropi4.txt  mllune2.txt  mlorph2.txt  mlterra1.txt  mltropi4.txt  mscent4.txt  mscrys2.txt  mslune2.txt  msterre2.txt  mstropi2.txt  tradar2.txt  tremote3.txt  tspid1.txt  tspid2.txt  ttit2.txt  twasp1.txt
help/E/: cbot.txt  dfor.txt  fglobal.txt  mhcent4.txt  mhterra1.txt  mhtropi4.txt  miterra1.txt  mivolca5.txt  mlsaari3.txt  mltropi3.txt  mscent2.txt  mstropi5.txt  texch2.txt  tproc1.txt  tremote5.txt  tsniff.txt  ttit1.txt
help/F/: authors.txt  command.txt  dexch1.txt  dfor.txt  dhelp1.txt  dlaby1.txt  dmove1.txt  dproc2.txt  dradar1.txt  dremova1.txt  dremova2.txt  dtrap2.txt  fglobal.txt  licences.txt  mhcent3.txt  mhcrys3.txt  mhcrys4.txt  mhlune3.txt  mhlune4.txt  mhsaari3.txt  mhterra1.txt  mhterra3.txt  mhterra4.txt  mhterre2.txt  mhterre3.txt  mhtropi1.txt  mhtropi2.txt  mhtropi3.txt  mhtropi5.txt  mhvolca1.txt  mhvolca2.txt  mhvolca3.txt  mhvolca4.txt  micent1.txt  micent4.txt  micrys1.txt  micrys4.txt  milune3.txt  milune4.txt  miorph2.txt  (+54 more)
help/P/: COMMAND.TXT  Tant5.TXT  Ttit1.TXT  Ttit2.TXT  cbot.txt  dexch1.txt  dfollow1.txt  dlaby1.txt  dmove1.txt  dproc1.txt  dproc2.txt  dremova1.txt  dremova2.txt  dtrap1.txt  fglobal.txt  licences.txt  mhcent2.txt  mhcrys3.txt  mhcrys4.txt  mhlune3.txt  mhorph2.txt  mhsaari1.txt  mhterra1.txt  mhterra2.txt  mhterra3.txt  mhterre1.txt  mhterre3.txt  mhtropi1.txt  mhtropi2.txt  mhvolca3.txt  mhvolca6.txt  micent1.txt  micent3.txt  micent4.txt  micrys4.txt  milune3.txt  misaari1.txt  miterra1.txt  miterra3.txt  miterra4.txt  (+41 more)
help/R/: freecarvy.txt  mhterra1.txt  mhterra3.txt  mhtropi1.txt  micent2.txt  micent3.txt  micent4.txt  micrys1.txt  micrys3.txt  micrys4.txt  milune1.txt  miorph2.txt  mivolca6.txt  mltropi1.txt  mltropi3.txt  mscent3.txt  mscrys3.txt  mssaari2.txt  mstropi5.txt  tant2.txt  tdragst.txt  tproc2.txt  tspid3.txt
help/cbot/: abstime.txt  array.txt  close.txt  deletef.txt  delinfo.txt  dist.txt  eof.txt  errmode.txt  file.txt  flatgrnd.txt  function.txt  move.txt  nan.txt  object.txt  open.txt  pointer.txt  private.txt  public.txt  readln.txt  receive.txt  return.txt  send.txt  static.txt  strfind.txt  string.txt  strleft.txt  strlen.txt  strlower.txt  strmid.txt  strright.txt  strupper.txt  strval.txt  synchro.txt  testinfo.txt  this.txt  writeln.txt
help/object/: botgj.txt  botoc.txt  botor.txt  bullet.txt  enerspot.txt  exchange.txt  safe.txt  titanore.txt
levels/: .gitignore  CMakeLists.txt  defi-po4a.cfg  defi100.txt  defi101.txt  defi102.txt  defi103.txt  defi104.txt  defi200.txt  defi201.txt  defi202.txt  defi203.txt  defi204.txt  defi205.txt  defi300.txt  defi301.txt  defi302.txt  defi400.txt  defi401.txt  defi402.txt  free-po4a.cfg  free100.txt  free101.txt  free200.txt  free201.txt  free301.txt  free400.txt  free401.txt  free500.txt  free501.txt  free600.txt  free601.txt  free700.txt  free701.txt  free800.txt  free801.txt  free901.txt  gen_levels_xml.sh  lost-po4a.cfg  lost000.txt  (+150 more)
levels-i18n/: CMakeLists.txt
levels-i18n/scripts/: 01_create_po4a_file.sh  02_run_po4a.sh  03_inject_translations.sh  04_move_helpfiles_to_paths.sh  05_move_untranslated_helpfiles_to_paths.sh
levels/battles/: deruiner.txt  level_common.txt
levels/defi-po/: de.po  defi.pot  fr.po  pl.po  ru.po
levels/defi102/: scene.txt
levels/defi301/: scene.txt
levels/exercises/: planet.txt  terrain.txt
levels/free-po/: de.po  fr.po  free.pot  pl.po  ru.po
levels/free101/: scene.txt
levels/free201/: scene.txt
levels/free301/: scene.txt
levels/free701/: scene.txt
levels/lost-po/: fr.po  lost.pot  ru.po
levels/perso-po/: de.po  (+4 more)
music/: .gitignore  CMakeLists.txt  README.md  music006.mid  music008.mid  music009.mid
(+5131 files in other folders)
