if(NOT DEFINED COLOBOT_INSTALL_ENGINE_DATA_DIR)
    set(COLOBOT_INSTALL_ENGINE_DATA_DIR "${COLOBOT_INSTALL_DATA_DIR}/common" CACHE PATH "Colobot shared engine data directory")
endif()

install(DIRECTORY fonts      DESTINATION ${COLOBOT_INSTALL_ENGINE_DATA_DIR})
install(DIRECTORY models     DESTINATION ${COLOBOT_INSTALL_ENGINE_DATA_DIR})
# install(DIRECTORY models-new DESTINATION ${COLOBOT_INSTALL_ENGINE_DATA_DIR})
install(DIRECTORY sounds     DESTINATION ${COLOBOT_INSTALL_ENGINE_DATA_DIR})
install(DIRECTORY textures   DESTINATION ${COLOBOT_INSTALL_ENGINE_DATA_DIR})
install(DIRECTORY            DESTINATION ${COLOBOT_INSTALL_ENGINE_DATA_DIR}/mods) # Empty directory